fixed alignment

--- a/CACCSS.css
+++ b/CACCSS.css
@@ -20,6 +20,11 @@ body {
   border-color: black;
 }
 
+#calcSummary{
+  text-align: center;
+  margin-bottom: 1em;
+}
+
 .calculator {
   display: grid;
   grid-template-columns: 50% 50%;
